--- a/app/views/hybrid_bills/steps/forms/organisationgroup.haml
+++ b/app/views/hybrid_bills/steps/forms/organisationgroup.haml
@@ -2,6 +2,6 @@ this is covering group section
 %br/
 %h1 Group of organisations
 
-=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true }
+=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true, group_name: 'Organisation name(s)' }
 
 
