--- a/app/views/hybrid_bills/steps/forms/individualgroup.haml
+++ b/app/views/hybrid_bills/steps/forms/individualgroup.haml
@@ -2,5 +2,5 @@ this is covering group section
 %br/
 %h1 Group of individuals details
 
-=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true }
+=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true, group_name: 'Group name' }
 
