--- a/app/views/hybrid_bills/steps/forms/organisation.haml
+++ b/app/views/hybrid_bills/steps/forms/organisation.haml
@@ -2,5 +2,5 @@ this is covering organisation section
 %br/
 %h1 Organisation
 
-=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true }
+=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true, group_name: 'Organisation name' }
 
