--- a/app/views/hybrid_bills/steps/document-submission.haml
+++ b/app/views/hybrid_bills/steps/document-submission.haml
@@ -10,6 +10,6 @@
       %h3#file-uploaded-txt
         Attach your petition template
         %label
-        = file_field_tag 'file', class: 'file--uploader', id: 'file-upload', title: 'Click here to upload your petition'
+        = file_field_tag 'hybrid_bill_document[file]', class: 'file--uploader', id: 'file-upload', title: 'Click here to upload your petition'
     %p#file-uploaded.file--uploaded No file(s) selected
     = submit_tag 'next'
