Initial error handling

--- a/app/views/hybrid_bills/show.haml
+++ b/app/views/hybrid_bills/show.haml
@@ -1,3 +1,6 @@
+- if flash[:alert]
+  %h1= t(flash[:alert])
+
 %h2 Before you send your petition
 %p Before you petition the New Motorway Bill you should:
 %hr{:style => "border-bottom: dotted 0.5px #001"}/
