Updates to views and form partials

--- a/app/views/hybrid_bills/email.haml
+++ b/app/views/hybrid_bills/email.haml
@@ -1,1 +1,4 @@
-%h1 email page
+#content.hero.theme--grey-4
+  .container
+    %h1 Who are you submitting a petition for?
+    %p.lead{:style => "margin-top: 18px;"} Step 1 of 2
