--- a/app/views/hybrid_bills/steps/forms/components/_check_box.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_check_box.haml
@@ -1,2 +1,3 @@
-= f.label attribute
-= f.check_box attribute, class: f.object.errors[attribute].present? ? 'invalid' : nil
+.input-group
+  = f.check_box attribute, class: f.object.errors[attribute].present? ? 'invalid' : nil
+  = f.label attribute, 'I would like to receive updates from the HS2 bill committee'
