--- a/app/views/hybrid_bills/steps/forms/components/_form_field.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_form_field.haml
@@ -2,7 +2,7 @@
   = f.label attribute, label_value
 - else
   = f.label attribute
-= f.text_field attribute, class: f.object.errors[attribute].present? ? 'invalid' : nil
+= f.text_field attribute, class: [local_assigns.fetch(:class, ''),(f.object.errors[attribute].present? ? 'invalid' : '')].join(' ')
 - if f.object.errors[attribute].present?
   - f.object.errors.messages[attribute].each do |message|
-    %span.error_message{ style: 'color: red;' }= message
+    %p.error_message{ style: 'color: red;' }= message
