--- a/app/views/hybrid_bills/steps/forms/individualgroup.haml
+++ b/app/views/hybrid_bills/steps/forms/individualgroup.haml
@@ -1,6 +1,8 @@
-this is covering group section
-%br/
-%h1 Group of individuals details
+#content.hero.theme--grey-4
+  .container
+    %h1 Group details
+    %p.lead{:style => "margin-top: 18px;"} Step 3 of 5
 
-=render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true, group_name: 'Group name' }
-
+%section.section--major
+  .container
+    =render partial: 'hybrid_bills/steps/forms/details_form', locals: { petitioner_object: @petitioner_object, business_id: @business_id, include_group: true, group_name: 'Group name', group_type: 'group'}
