--- a/app/views/hybrid_bills/steps/terms-conditions.haml
+++ b/app/views/hybrid_bills/steps/terms-conditions.haml
@@ -1,8 +1,52 @@
-This is the terms and condition page
+#content.hero.theme--grey-4
+  .container
+    %h1 Terms and conditions
+    %p.lead{:style => "margin-top: 18px;"} Step 5 of 5
 
-%p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce accumsan eros eros, sed aliquam arcu posuere eget. Nunc eget varius mi. In interdum tellus ultricies, tincidunt diam a, elementum nisi. Nullam faucibus et mauris id faucibus. Nulla porttitor nec nibh et vulputate. Cras non gravida nisi. Aliquam in rutrum urna. Donec commodo sapien in odio molestie, sit amet blandit velit fermentum. In blandit eros non bibendum auctor. Sed id dapibus neque. Aenean a interdum ipsum. Integer id fermentum risus, non elementum diam. Sed vitae ex lectus.
+%section
+  .container
+    %h2 Personal information
 
-= form_tag hybrid_bill_path(@business_id, step: 'terms-conditions') do
-  = hidden_field_tag 'hybrid_bill_terms[accepted]', true
-  = submit_tag 'Accept'
+    %p A copy of this petition and information provided in the online form will be:
 
+    %ul.list--bullet
+      %li{:style => "margin-bottom: 12px;"}
+        kept in the
+        %a{:href => "#"} Private Bill Office
+        and as a record in the
+        %a{:href => "#"} Parliamentary Archives
+        \.
+
+      %li{:style => "margin-bottom: 12px;"}
+        sent to the
+        %a{:href => "#"} Department for Transport
+        and
+        %a{:href => "#"} HS2 Ltd
+        after the petition has been accepted by the Private Bill Office.
+
+      %li published, including your name and address, on UK Parliament’s website.
+
+    %p The personal information you have provided may be kept in a database by both Private Bill Offices.
+
+%section
+  .container
+    %h2 Communications
+
+    %p Private Bill Office staff may call or email any of the named petitioners to verify the information provided.
+
+    %p Communications may be stored in databases to keep track of information you have given or received. This information may be shared between the Private Bill Offices.
+
+%section
+  .container
+    .block--border__bottom
+      %h2 Consent and confirmation
+
+      %p The information you have provided in the petition and online form is accurate.
+
+      %p If you have filled in the form on behalf of an individual, a group or organisation(s), you have been authorised to do so.
+
+%section
+  .container
+    = form_tag hybrid_bill_path(@business_id, step: 'terms-conditions') do
+      = hidden_field_tag 'hybrid_bill_terms[accepted]', true
+      = submit_tag 'I agree - send petition', :class => "btn--primary", :style => "width: 210px;"
