Updates to views, partials and controllers for hybrid bills

--- a/app/views/hybrid_bills/email.haml
+++ b/app/views/hybrid_bills/email.haml
@@ -1,7 +1,12 @@
 #content.hero.theme--grey-4
   .container
     %h1 Who are you submitting a petition for?
-    %p.lead{:style => "margin-top: 18px;"} Step 1 of 2
+    %p.lead Step 1 of 2
 
-= form_tag hybrid_bill_email_path(@business_id), method: :get do
-  = render partial: 'hybrid_bills/steps/forms/components/petitioner-type'
+%section.section--major
+  .container
+    = form_tag hybrid_bill_email_path(@business_id), method: :get do
+      = render partial: 'hybrid_bills/steps/forms/components/petitioner-type'
+
+    %p
+      =link_to 'Back', hybrid_bill_path(@business_id)
