--- a/app/views/hybrid_bills/steps/complete.haml
+++ b/app/views/hybrid_bills/steps/complete.haml
@@ -24,19 +24,19 @@
     .timeline
       %h3 Request for payment emailed
       %ul.list--block
-        %li{:style => "background-color: transparent;padding-bottom: 6px;"}
+        %li
           .list--details
             %p We’ll email you within 14 days about how to pay the fee.
 
       %h3 Your petition is checked
       %ul.list--block
-        %li{:style => "background-color: transparent;padding-bottom: 6px;"}
+        %li
           .list--details
             %p We’ll review your petition and publish it on our website. This will include your name and address. We’ll then send it to the Department for Transport (DfT).
 
       %h3 The DfT will email you about your petition
       %ul.list--block
-        %li{:style => "background-color: transparent;padding-bottom: 6px;"}
+        %li
           .list--details
             %p This will happen before the committee starts discussing HS2 phase 2a petitions in Spring 2018.
 
@@ -46,7 +46,7 @@
 
     %p
       You can withdraw your petition by emailing us at
-      %a{:href => "mailto:petition@parliament.uk"} petition@parliament.uk
+      %a{href: 'mailto:petition@parliament.uk'} petition@parliament.uk
       \.
 
     %p Anyone named on a petition can withdraw from the petition, leaving the remaining petitioners to continue with it.
