--- a/app/views/hybrid_bills/steps/forms/individualgroup.haml
+++ b/app/views/hybrid_bills/steps/forms/individualgroup.haml
@@ -1,7 +1,7 @@
 #content.hero.theme--grey-4
   .container
     %h1 Group details
-    %p.lead{:style => "margin-top: 18px;"} Step 3 of 5
+    %p.lead Step 3 of 5
 
 %section.section--major
   .container
