--- a/app/views/hybrid_bills/email/individualgroup.haml
+++ b/app/views/hybrid_bills/email/individualgroup.haml
@@ -1,2 +1,6 @@
-%h1 individual group
+#content.hero.theme--grey-4
+  .container
+    %h1 Writing your petition - group of individuals
+    %p.lead Step 2 of 2
+
 = render partial: 'hybrid_bills/email/body'
