--- a/app/views/hybrid_bills/email/organisation.haml
+++ b/app/views/hybrid_bills/email/organisation.haml
@@ -1,2 +1,6 @@
-%h1 organisation
+#content.hero.theme--grey-4
+  .container
+    %h1 Writing your petition - organisation
+    %p.lead Step 2 of 2
+
 = render partial: 'hybrid_bills/email/body'
