--- a/app/views/hybrid_bills/index.haml
+++ b/app/views/hybrid_bills/index.haml
@@ -1,4 +1,4 @@
 #content.section--primary
   .container
     %h1 Petition a hybrid bill
-    = link_to 'Petition the HS2 bill', hybrid_bill_path('1'), :class => "btn--primary"
+    = link_to 'Petition the HS2 bill', hybrid_bill_path('1'), class: 'btn--primary'
