--- a/app/views/hybrid_bills/steps/forms/_details_form.haml
+++ b/app/views/hybrid_bills/steps/forms/_details_form.haml
@@ -1,4 +1,7 @@
 = form_for petitioner_object, url: hybrid_bill_path(business_id, step: 'details') do |f|
+  - if f.object.errors.any?
+    %p.sr-only{ aria: { assertive: 'live' } } Your form has errors. Please correct them and submit again.
+
   - if include_group
     - if local_assigns.fetch(:group_name, nil)
       %fieldset
@@ -11,60 +14,62 @@
 
   %fieldset
     %legend.sr-only Please provide details for the individual petitioner
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :first_name, :label_value => "First name(s)", "aria-required" => true}
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :first_name, label_value: 'First name(s)', aria: { required: 'true' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :surname, :label_value => "Last name" }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :surname, label_value: 'Last name', aria: { required: 'true' }, maxlength: 255 }
 
     %p Do you live in the UK?
-    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk }
+    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: f, attribute: :in_the_uk, yes_class: 'country-uk', no_class: 'country-row' }
+    #countrySelect
+      = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: f, attribute: :country }
 
-    = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: f, attribute: :country }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_1, label_value: 'Address line 1', aria: { required: 'true' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_1, :label_value => "Address line 1" }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_2, label_value: 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :address_2, :label_value => "Address line 2 (optional)" }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, label_value: 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 10 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :postcode, :label_value => "Post code", class: 'input__sm' }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :email }
-
-    = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: f, attribute: :receive_updates}
+    = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: f, attribute: :receive_updates }
     %br
 
-    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :telephone, :label_value => "Phone", class: 'input__md' }
+    = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: f, attribute: :telephone, label_value: 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
 
   %h2 Who should be contacted about this petition?
   %fieldset
     %legend.sr-only Please confrim who should be contacted about this petition
-    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons_rep', locals: { f: f, attribute: :has_a_rep }
+    = render partial: 'hybrid_bills/steps/forms/components/radio_buttons_reversed', locals: { f: f, attribute: :has_a_rep, no_label: 'Individual above', no_class: 'indCheck', yes_label: 'Another contact', yes_class: 'repCheck' }
 
   .block--border__bottom
-    %h3{:style => "margin-bottom: 18px"} Main contact's details
-    = f.fields_for :hybrid_bill_agent, petitioner_object.hybrid_bill_agent do |a|
-      %fieldset
-        %legend.sr-only Please provide details for the main contact
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :first_name, :label_value => "First name(s)" }
+    #repForm
+      %h3 Main contact's details
+      = f.fields_for :hybrid_bill_agent, petitioner_object.hybrid_bill_agent do |a|
+        %fieldset
+          %legend.sr-only Please provide details for the main contact
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :first_name, label_value: 'First name(s)', aria: { required: 'true' }, maxlength: 255 }
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :surname, :label_value => "Last name" }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :surname, label_value: 'Last name', aria: { required: 'true' }, maxlength: 255 }
 
-        %p Do you live in the UK?
-        = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk }
+          %p Do you live in the UK?
+          = render partial: 'hybrid_bills/steps/forms/components/radio_buttons', locals: { f: a, attribute: :in_the_uk, yes_class: 'country-uk-rep', no_class: 'country-row-rep' }
 
-        = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: a, attribute: :country }
+          #countrySelectRep
+            = render partial: 'hybrid_bills/steps/forms/components/country_select', locals: { f: a, attribute: :country }
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_1, :label_value => "Address line 1" }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_1, label_value: 'Address line 1', aria: { required: 'true' }, maxlength: 255 }
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_2, :label_value => "Address line 2 (optional)" }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :address_2, :label_value => 'Address line 2 (optional)', aria: { required: 'false' }, maxlength: 255 }
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :postcode, :label_value => "Post code", class: 'input__sm' }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :postcode, :label_value => 'Post code', class: 'input__sm', aria: { required: 'true' }, maxlength: 20 }
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :email }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :email, aria: { required: 'true' }, maxlength: 255 }
 
-        = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: a, attribute: :receive_updates }
-        %br
+          = render partial: 'hybrid_bills/steps/forms/components/check_box', locals: { f: a, attribute: :receive_updates }
+          %br
 
-        = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :telephone, :label_value => "Phone", class: 'input__md' }
+          = render partial: 'hybrid_bills/steps/forms/components/form_field', locals: { f: a, attribute: :telephone, :label_value => 'Phone', class: 'input__md', aria: { required: 'true' }, maxlength: 20 }
 
-  = f.submit 'Next', :class => "btn--primary", :style => "width: 70px;"
+  = f.submit 'Next', class: 'btn--primary'
 %p
   =link_to 'Back', hybrid_bill_path(@business_id, step: 'who-are-you-submitting-a-petition-for')
