--- a/app/views/hybrid_bills/steps/terms-conditions.haml
+++ b/app/views/hybrid_bills/steps/terms-conditions.haml
@@ -1,7 +1,7 @@
 #content.hero.theme--grey-4
   .container
     %h1 Terms and conditions
-    %p.lead{:style => "margin-top: 18px;"} Step 5 of 5
+    %p.lead Step 5 of 5
 
 %section
   .container
@@ -10,18 +10,18 @@
     %p A copy of this petition and information provided in the online form will be:
 
     %ul.list--bullet
-      %li{:style => "margin-bottom: 12px;"}
+      %li
         kept in the
-        %a{:href => "#"} Private Bill Office
+        %a{href: ''} Private Bill Office
         and as a record in the
-        %a{:href => "#"} Parliamentary Archives
+        %a{href: ''} Parliamentary Archives
         \.
 
-      %li{:style => "margin-bottom: 12px;"}
+      %li
         sent to the
-        %a{:href => "#"} Department for Transport
+        %a{href: ''} Department for Transport
         and
-        %a{:href => "#"} HS2 Ltd
+        %a{href: ''} HS2 Ltd
         after the petition has been accepted by the Private Bill Office.
 
       %li published, including your name and address, on UK Parliament’s website.
@@ -49,4 +49,4 @@
   .container
     = form_tag hybrid_bill_path(@business_id, step: 'terms-conditions') do
       = hidden_field_tag 'hybrid_bill_terms[accepted]', true
-      = submit_tag 'I agree - send petition', :class => "btn--primary", :style => "width: 210px;"
+      = submit_tag 'I agree - send petition', class: 'btn--primary'
