--- a/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
+++ b/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
@@ -1,7 +1,7 @@
 #content.hero.theme--grey-4
   .container
     %h1 Who are you submitting a petition for?
-    %p.lead{:style => "margin-top: 18px;"} Step 2 of 5
+    %p.lead Step 2 of 5
 
 %section.section--major
   .container
