--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -10,7 +10,7 @@
           %picture
             %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=732&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90 2x", media: "(min-width: 480px)"}
             %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=444&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=888&quality=90 2x"}
-            %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90", alt: "#{@person.display_name}" }
+            %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90", alt: "#{t('.title').capitalize} #{@person.display_name}" }
           %figcaption
             = "#{t('.title').capitalize}"
             = link_to(@person.display_name, person_path(@person.graph_id))
@@ -34,21 +34,21 @@
         %li
           %figure
             %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&width=260&quality=80", alt: "#{@person.display_name}" }
+              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_wide_portrait')}" }
           .list--details
             %h3= t('.download_heading_1')
             = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_wide_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:2&quality=80&download=true", class: 'btn--primary', download: '')
         %li
           %figure
             %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&width=260&quality=80", alt: "#{@person.display_name}" }
+              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_portrait')}" }
           .list--details
             %h3= t('.download_heading_2')
             = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_portrait'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=MCU_3:4&quality=80&download=true", class: 'btn--primary', download: '')
         %li
           %figure
             %picture
-              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{@person.display_name}" }
+              %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&width=260&quality=80", alt: "#{@person.display_name} #{t('.alt_text_thumbnail')}" }
           .list--details
             %h3= t('.download_heading_3')
             = link_to(t('.download_jpeg').capitalize + ' ' + t('.download_res_thumbnail'), "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?crop=CU_1:1&quality=80&download=true", class: 'btn--primary', download: '')
