[WEBDEV-416] Refactoring of typography options

--- a/app/views/people/_current_role.html.haml
+++ b/app/views/people/_current_role.html.haml
@@ -1,6 +1,6 @@
 %li
   .list--details
-    %h3.content--xs= role_type
+    %h3.typography--xs= role_type
     %h4.lead= role_title
     - if role.try(:nodes)
       %p= "Elected #{role.nodes.count} times"
