[WEBSITE-2148] tabindex=0 for id=content

--- a/app/views/constituencies/map.html.haml
+++ b/app/views/constituencies/map.html.haml
@@ -1,5 +1,5 @@
 = content_for :title, "Map of #{@constituency.name}"
-#content.section--primary
+#content.section--primary{:tabindex => "0"}
   .container
     %h1= @constituency.name
     = render 'shared/map'
