--- a/app/views/hybrid_bills/email.haml
+++ b/app/views/hybrid_bills/email.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Who are you submitting a petition for?
     %p.lead Step 1 of 2
