--- a/app/views/hybrid_bills/email/organisation.haml
+++ b/app/views/hybrid_bills/email/organisation.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Writing your petition - organisation
     %p.lead Step 2 of 2
