--- a/app/views/hybrid_bills/steps/document-submission.haml
+++ b/app/views/hybrid_bills/steps/document-submission.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Upload your completed template
     %p.lead Step 4 of 5
