--- a/app/views/hybrid_bills/steps/terms-conditions.haml
+++ b/app/views/hybrid_bills/steps/terms-conditions.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Terms and conditions
     %p.lead Step 5 of 5
