--- a/app/views/constituencies/show.html.haml
+++ b/app/views/constituencies/show.html.haml
@@ -1,4 +1,4 @@
-#content.section--primary
+#content.section--primary{:tabindex => "0"}
   .container
     %h1= title(@constituency.name)
     - @constituency.regions.each do |region|
