--- a/app/views/hybrid_bills/steps/forms/individualgroup.haml
+++ b/app/views/hybrid_bills/steps/forms/individualgroup.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Group details
     %p.lead Step 3 of 5
