--- a/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
+++ b/app/views/hybrid_bills/steps/who-are-you-submitting-a-petition-for.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Who are you submitting a petition for?
     %p.lead Step 2 of 5
