--- a/app/views/hybrid_bills/steps/writing-your-petition.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition.haml
@@ -1,4 +1,4 @@
-#content.hero.theme--grey-4
+#content.hero.theme--grey-4{:tabindex => "0"}
   .container
     %h1 Writing your petition
     %p.lead Step 1 of 5
