--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -1,7 +1,7 @@
 
 - license_link = "https://creativecommons.org/licenses/by/3.0/"
 
-.section--primary#content
+.section--primary#content{:tabindex => "0"}
   .container
     .block--border__bottom
       %h1= title("#{t('.title').capitalize} #{@person.display_name}")
