--- a/app/views/parliaments/houses/parties/show.html.haml
+++ b/app/views/parliaments/houses/parties/show.html.haml
@@ -5,7 +5,7 @@
       %span= @party.name
       = link_to "#{@parliament.date_range(date_format: '%Y')} #{t('parliament')}", parliament_path(@parliament.graph_id)
 
-%section#content
+%section#content{:tabindex => "0"}
   .container
     %ul.list--block
       %li
