--- a/app/views/parliaments/parties/show.html.haml
+++ b/app/views/parliaments/parties/show.html.haml
@@ -4,7 +4,7 @@
     %h1
       %span= @party.name
       = link_to "#{@parliament.date_range(date_format: '%Y')} #{t('parliament')}", parliament_path(@parliament.graph_id)
-%section#content
+%section#content{:tabindex => "0"}
   .container
     %ul.list--block
       %li
