--- a/app/views/parties/show.html.haml
+++ b/app/views/parties/show.html.haml
@@ -1,4 +1,4 @@
-#content.section--primary
+#content.section--primary{:tabindex => "0"}
   .container
     %h1= title(@party.name) if @party.name.present?
 
