[WEBSITE-1365][WEBSITE-1366] Add Opposition Roles to People Show
* Updated parliament-grom-decorators gem
* Added opposition roles to PeopleController
* Added opposition roles to people show view and partials
* Updated i18n locales
* Updated view and controller specs

--- a/app/views/people/_timeline_roles.html.haml
+++ b/app/views/people/_timeline_roles.html.haml
@@ -22,3 +22,6 @@
 
       - elsif RoleHelper.role_type(role, 'GovernmentIncumbency')
         = render 'timeline_role', role: role, role_type: "#{role.government_position.name}", role_title: t('.government_role').capitalize
+
+      - elsif RoleHelper.role_type(role, 'OppositionIncumbency')
+        = render 'timeline_role', role: role, role_type: "#{role.opposition_position.name}", role_title: t('.opposition_role').capitalize
