--- a/app/views/people/_current_roles.html.haml
+++ b/app/views/people/_current_roles.html.haml
@@ -2,6 +2,9 @@
   - current_roles.fetch('GovernmentIncumbency', []).each do |role|
     = render 'current_role', role: role, role_type: "#{t('.government_role').capitalize}", role_title: "#{role.government_position.name}"
 
+  - current_roles.fetch('OppositionIncumbency', []).each do |role|
+    = render 'current_role', role: role, role_type: "#{t('.opposition_role').capitalize}", role_title: "#{role.opposition_position.name}"
+
   - current_roles.fetch('SeatIncumbency', []).each do |role|
     - if role.class == GroupingHelper::GroupedObject
       - first_line_start = t('.mp_for')
