--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -45,7 +45,7 @@
           %h3= link_to "#{t('.show_history')}", "#"
         .dropdown__content
           .timeline
-            - unless @history.nil? || @history[:current].empty?
+            - if @history[:current]
               %h2= "#{t('.held_currently')}"
               %ul.list--block
                 = render 'timeline_roles', timeline_roles: @history[:current]
