--- a/app/views/hybrid_bills/steps/forms/components/_form_field.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_form_field.haml
@@ -5,7 +5,7 @@
 
 - errors_present = f.object.errors[attribute].present?
 - error_id = "#{f.object.class.to_s.underscore}_#{attribute.to_s}_error" # Aria described by ID
-= f.text_field attribute, class: [local_assigns.fetch(:class, ''),(errors_present ? 'invalid' : '')].join(' '), maxlength: local_assigns.fetch(:maxlength, nil), aria: { required: local_assigns.fetch(:aria, {}).fetch(:required, nil), describedby: errors_present ? error_id : nil }
+= f.text_field attribute, class: local_assigns.fetch(:class, nil), maxlength: local_assigns.fetch(:maxlength, nil), aria: { required: local_assigns.fetch(:aria, {}).fetch(:required, nil), describedby: errors_present ? error_id : nil }
 
 - if errors_present
   - f.object.errors.messages[attribute].each do |message|
