--- a/app/views/hybrid_bills/steps/forms/components/_radio_buttons.haml
+++ b/app/views/hybrid_bills/steps/forms/components/_radio_buttons.haml
@@ -1,4 +1,4 @@
-%div{ class: f.object.errors[attribute].present? ? 'invalid' : nil }
+%div
   .input-group__inline
     .input-group
       = f.radio_button attribute, true, value: true, checked: true, class: local_assigns.fetch(:yes_class, nil)
