--- a/app/views/people/show.html.haml
+++ b/app/views/people/show.html.haml
@@ -1,4 +1,4 @@
-.section--primary#content{:tabindex => "0"}
+.section--primary#content{ tabindex: "0" }
   .container
     %h1= title(@person.display_name)
 
