--- a/app/views/houses/parties/show.html.haml
+++ b/app/views/houses/parties/show.html.haml
@@ -1,6 +1,6 @@
 - title("#{@house.name} - #{@party.name}")
 
-#content.section--primary{:tabindex => "0"}
+#content.section--primary{ tabindex: "0" }
   .container
 
     %h1= "#{@party.name} - #{@house.name}"
