--- a/app/views/houses/show.html.haml
+++ b/app/views/houses/show.html.haml
@@ -1,6 +1,6 @@
 - page_title = title(@house.name)
 
-.section--primary#content{:tabindex => "0"}
+.section--primary#content{ tabindex: "0" }
   .container
     %h1= page_title
 
