--- a/app/views/media/show.html.haml
+++ b/app/views/media/show.html.haml
@@ -1,15 +1,15 @@
 
 - license_link = "https://creativecommons.org/licenses/by/3.0/"
 
-.section--primary#content{:tabindex => "0"}
+.section--primary#content{ tabindex: "0" }
   .container
     .block--border__bottom
       %h1= title("#{t('.title').capitalize} #{@person.display_name}")
       - if @image.graph_id
         %figure
           %picture
-            %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=732&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90 2x", media: "(min-width: 480px)"}
-            %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=444&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=888&quality=90 2x"}
+            %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=732&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90 2x", media: "(min-width: 480px)" }
+            %source{ srcset: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=444&quality=90, #{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=888&quality=90 2x" }
             %img{ src: "#{ENV['IMAGE_SERVICE_URL']}/#{@image.graph_id}.jpeg?width=1464&quality=90", alt: "#{t('.title').capitalize} #{@person.display_name}" }
           %figcaption
             = "#{t('.title').capitalize}"
