correcting step names in views to reflect changes

--- a/app/views/hybrid_bills/show.haml
+++ b/app/views/hybrid_bills/show.haml
@@ -66,5 +66,5 @@
 
 %section.section--major
   .container
-    =link_to 'Send us your petition on our website', hybrid_bill_path(@business_id, step: 'writing-your-petition'), class: 'btn--primary'
+    =link_to 'Send us your petition on our website', hybrid_bill_path(@business_id, step: 'writing-your-petition-online'), class: 'btn--primary'
     =link_to 'Send us your petition by email, post or in person', hybrid_bill_email_path(@business_id), class: 'btn--primary'
