--- a/app/views/hybrid_bills/steps/writing-your-petition-online.haml
+++ b/app/views/hybrid_bills/steps/writing-your-petition-online.haml
@@ -17,6 +17,6 @@
 %section
   .container
     %p
-      =link_to 'Next', hybrid_bill_path(@business_id, step: 'who-are-you-submitting-a-petition-for'), class: 'btn--primary'
+      =link_to 'Next', hybrid_bill_path(@business_id, step: 'petition-online'), class: 'btn--primary'
     %p
       =link_to 'Back', hybrid_bill_path(@business_id)
